--- a/trendtailor/trendApp/templates/base.html
+++ b/trendtailor/trendApp/templates/base.html
@@ -1,31 +1,94 @@
-<!DOCTYPE html>
-{% load static %}  
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!DOCTYPE html>
 
-    <title>Semantic Search</title>
-    <link rel="stylesheet" href="{% static 'styleUpload.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    {% load static %}  
 
-    <link rel="stylesheet" href="{% static 'navbar.css' %}">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <html lang="en">
 
-</head>
-<body>
-    <div class="myDiv">
-        <a class="custom-active" href="{% url 'home' %}"><i class="fa fa-fw fa-home"></i> Home</a> 
-        <a href=" {% url 'upload' %} "><i class="fa fa-fw fa-cloud-upload"></i> Upload Video</a> 
-        <a href="{% url 'train' %}"><i class="fa fa-cogs"></i> Index Videos </a> 
-        <a href="{% url 'serve' %}"><i class="fa fa-folder-open"></i> Video Archive </a> 
-    </div>
-    {% block body %}
-    {% endblock body %}
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
-    <script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    </script>
-</body>
-</html>
+        <title>Trend Tailor</title>
+        <link rel="stylesheet" href="{% static 'styleUpload.css' %}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    </head>
+
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            {% if user.is_authenticated %}
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <a class="navbar-brand" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
+                            <i class="fa fa-bars" aria-hidden="true"></i> Dashboard
+                        </a>
+                    </div>
+                </nav>
+            {% endif %}
+            <div class="container-fluid">
+                
+                <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'home' %}"><i class="fa fa-fw fa-home"></i> Home</a>
+                            </li>
+                            {% if user.is_authenticated %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'profile' %}"><i class="fa fa-fw fa-user"></i> Profile</a>
+                                </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'logout' %}"><i class="fa fa-fw fa-user"></i> Logout </a>
+                                </li>
+                            {% else %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'login' %}"><i class="fa fa-fw fa-sign-in"></i> Login</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'register' %}"><i class="fa fa-fw fa-user-plus"></i> Registration</a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Offcanvas Sidebar -->
+        <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasSidebarLabel">Menu</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <img src="TrendTailor.png" alt="TrendTailor Logo" class="img-fluid rounded mb-3" style="width: 80%;">
+                <div class="mb-3">
+                    <a href="{% url 'dashboard' %}" class="btn btn-secondary w-100">Dashboard</a>
+                </div>
+                <div class="mb-3">
+                    <a href="#" class="btn btn-secondary w-100">Contents</a>
+                </div>
+                <div class="mb-3">
+                    <a href="#" class="btn btn-secondary w-100">My Preferences</a>
+                </div>
+                <div class="mb-3">
+                    <a href="#" class="btn btn-secondary w-100">Summarize Content</a>
+                </div>
+                <div class="mb-3">
+                    <a href="#" class="btn btn-secondary w-100">Templates</a>
+                </div>
+                <div class="mb-3">
+                    <a href="#" class="btn btn-secondary w-100">Archived Contents</a>
+                </div>
+            </div>
+        </div>
+        
+        {% block body %}
+        {% endblock body %}
+        <script>
+        </script>
+    </body>
+    </html>
