--- a/trendtailor/trendApp/templates/base.html
+++ b/trendtailor/trendApp/templates/base.html
@@ -12,6 +12,50 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <style>
+            /* Share artile email preview */
+            .preview-card {
+                transform: scale(1);  
+                transform-origin: center; 
+                width: 100%; 
+                text-align: center;
+            }
+
+            .preview-container {
+                width: 100%;
+                overflow: hidden;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .scaled-iframe {
+                width: 100%;
+                height: 300px; 
+                border: none;
+            }
+        </style>
+        <script>
+            function resizeIframe(iframe) {
+                let doc = iframe.contentWindow.document;
+                
+                let style = doc.createElement("style");
+                style.innerHTML = `
+                    body {
+                        transform: scale(0.6); 
+                        transform-origin: top left; 
+                        width: 166.67%; 
+                        height: auto;
+                        overflow: hidden; 
+                    }
+                    html {
+                        overflow: hidden; 
+                    }
+                `;
+                doc.head.appendChild(style);
+            }
+        </script>
+            
     </head>
 
     <body>
